--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         </dependency>
         <dependency>
             <groupId>com.hbhb</groupId>
-            <artifactId>flow-manage-api</artifactId>
+            <artifactId>flow-center-api</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
