--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>com.hbhb</groupId>
+            <artifactId>hbhb-beetlsql</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hbhb</groupId>
             <artifactId>system-center-api</artifactId>
             <version>1.0</version>
         </dependency>
@@ -25,5 +30,4 @@
             <version>1.0</version>
         </dependency>
     </dependencies>
-
 </project>
