--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -46,10 +46,20 @@ host:
   proxy: 47.96.83.55
 
 port:
-  default: 10075
-  dev: 10012
-  test: 10013
+  default: 10079
+  dev: 10018
+  dev-proxy: 10032
+  test: 10019
+  test-proxy: 10033
   prd: 10015
+
+# 指定服务提供方实例地址（为空则不指定）
+feign-url:
+#feign-url: 192.168.28.58:8887
+
+# 服务提供方实例名称
+provider:
+  system-center: system-center-@env@
 
 ################### 本地环境配置 ###################
 ---
@@ -59,14 +69,13 @@ spring:
     consul:
       host: consul.yeexun.com.cn
       discovery:
-        prefer-ip-address: true
+        #        prefer-ip-address: true
         instance-id: ${spring.application.name}-${server.port}-${spring.cloud.client.ip-address}
         service-name: ${spring.application.name}
         # 本地调试使用frp代理ip
         health-check-url: http://${host.docker0}:${port.default}/actuator/health
-#        hostname: ${host.docker0}
-#        port: ${port.default}
-
+        hostname: ${host.docker0}
+        port: ${port.default}
 ################### 开发环境配置 ###################
 ---
 spring:
@@ -77,11 +86,10 @@ spring:
       discovery:
         instance-id: ${spring.application.name}-${port.dev}-${spring.cloud.client.ip-address}
         service-name: ${spring.application.name}
-        health-check-url: http://${host.proxy}:${port.dev}/actuator/health
+        health-check-url: http://${host.docker0}:${port.dev}/actuator/health
         # 开发环境使用代理ip
         hostname: ${host.proxy}
-        port: ${port.dev}
-
+        port: ${port.dev-proxy}
 ################### 测试环境配置 ###################
 ---
 spring:
@@ -92,11 +100,10 @@ spring:
       discovery:
         instance-id: ${spring.application.name}-${port.test}-${spring.cloud.client.ip-address}
         service-name: ${spring.application.name}
-        health-check-url: http://${host.proxy}:${port.test}/actuator/health
+        health-check-url: http://${host.docker0}:${port.test}/actuator/health
         # 测试环境使用代理ip
         hostname: ${host.proxy}
-        port: ${port.test}
-
+        port: ${port.test-proxy}
 ################### 正式环境配置 ###################
 ---
 spring:
